--- a/success page/index.html
+++ b/success page/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Success</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <header class="header">
+        <h1 class="logo">LOGO</h1>
+        <nav class="navbar">
+            <a href="#">Home</a>
+            <a href="#">Portfolio</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+            <a href="#">Help</a>
+        </nav>
+    </header>
     
 </body>
+
 </html>
