--- a/success page/index.html
+++ b/success page/index.html
@@ -19,7 +19,26 @@
             <a href="#">Help</a>
         </nav>
     </header>
-    
+    <div class="main">
+        <div class="text">
+
+            <h1>WELL COME TO WEBSITE</h1>
+            <br>
+            <h2>WEB Design and development</h2>
+            <br>
+            <span class="para">Thank you for registering with us! We're excited to have you here. 
+                <br> 
+                
+                Enjoy exploring our website and all it has to offer. If you have any questions or need assistance, feel free
+                to reach
+                out.
+                <br> <br>
+                Happy browsing!</span>
+                <br> <br>
+                <button type="submit" class="btn">Join Us</button>
+            </div>
+    </div>
+
 </body>
 
 </html>
