--- a/success page/index.html
+++ b/success page/index.html
@@ -18,6 +18,11 @@
             <a href="#">Contact</a>
             <a href="#">Help</a>
         </nav>
+        <div class="line">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </header>
     <div class="main">
         <div class="text">
